Bug 329576 - umbrello crashes while opening a recently saved .xmi file
Summary: umbrello crashes while opening a recently saved .xmi file
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-01-03 21:00 UTC by Michael Brach
Modified: 2014-04-14 09:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.5
Sentry Crash Report:


Attachments
activity_diagram.xmi (23.73 KB, text/x-xmi)
2014-01-04 11:32 UTC, Michael Brach
Details
autospeichern.xmi (12.03 KB, text/x-xmi)
2014-01-04 11:32 UTC, Michael Brach
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Brach 2014-01-03 21:00:40 UTC
Application: umbrello (2.12.0)
KDE Platform Version: 4.12.0
Qt Version: 4.8.2
Operating System: Linux 3.2.0-57-generic x86_64
Distribution: Ubuntu 12.04.3 LTS

-- Information about the crash:
- What I was doing when the application crashed:

1. I was working on an activity diagram
2. during printing this diagram (I think the preview was produced), Umbrello crashed
3. I restarted Umbrello
4. Umbrello crashes while opening the  (recently saved version) of this  .xmi file

The crash can be reproduced every time.

-- Backtrace:
Application: Umbrello UML-Modeller (umbrello), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe818568780 (LWP 21139))]

Thread 3 (Thread 0x7fe8064f0700 (LWP 21140)):
#0  0x00007fe814a20a43 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fe81176bff6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe81176c124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe816383926 in QEventDispatcherGlib::processEvents (this=0x7fe8000008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fe816352e62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe8163530b7 in QEventLoop::exec (this=0x7fe8064efdd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fe816252077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fe816332b6f in QInotifyFileSystemWatcherEngine::run (this=0x1b22cb0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fe81625509b in QThreadPrivate::start (arg=0x1b22cb0) at thread/qthread_unix.cpp:307
#9  0x00007fe814722e9a in start_thread (arg=0x7fe8064f0700) at pthread_create.c:308
#10 0x00007fe814a2c3fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe7fe13e700 (LWP 21141)):
#0  0x00007fe81472605d in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x7fe7f8000a60) at pthread_mutex_unlock.c:290
#2  0x00007fe8117a75e1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe81176bf0e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe81176c124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fe816383926 in QEventDispatcherGlib::processEvents (this=0x7fe7f80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007fe816352e62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007fe8163530b7 in QEventLoop::exec (this=0x7fe7fe13ddd0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007fe816252077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007fe816332b6f in QInotifyFileSystemWatcherEngine::run (this=0x20c3840) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007fe81625509b in QThreadPrivate::start (arg=0x20c3840) at thread/qthread_unix.cpp:307
#11 0x00007fe814722e9a in start_thread (arg=0x7fe7fe13e700) at pthread_create.c:308
#12 0x00007fe814a2c3fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe818568780 (LWP 21139)):
[KCrash Handler]
#6  QGraphicsItem::pos (this=0x10) at graphicsview/qgraphicsitem.cpp:3605
#7  0x00000000006ba426 in x (this=<optimized out>) at /usr/include/qt4/QtGui/qgraphicsitem.h:280
#8  SignalWidget::paint (this=0x2632b50, painter=0x7fff307f1af0, option=0x1f661a8, widget=0x25530e0) at ../../umbrello/widgets/signalwidget.cpp:144
#9  0x00007fe815cf6069 in QGraphicsScenePrivate::draw (this=0x1f65f80, item=0x2632b60, painter=0x7fff307f1af0, viewTransform=0x7fff307f17c0, transformPtr=0x7fff307f1290, exposedRegion=0x2486338, widget=0x25530e0, opacity=1, effectTransform=0x0, wasDirtyParentSceneTransform=true, drawItem=true) at graphicsview/qgraphicsscene.cpp:4964
#10 0x00007fe815cf6b95 in QGraphicsScenePrivate::drawSubtreeRecursive (this=0x1f65f80, item=0x2632b60, painter=0x7fff307f1af0, viewTransform=0x7fff307f17c0, exposedRegion=0x2486338, widget=0x25530e0, parentOpacity=<optimized out>, effectTransform=0x0) at graphicsview/qgraphicsscene.cpp:4857
#11 0x00007fe815cf73b1 in QGraphicsScenePrivate::drawItems (this=0x1f65f80, painter=0x7fff307f1af0, viewTransform=0x7fff307f17c0, exposedRegion=0x2486338, widget=0x25530e0) at graphicsview/qgraphicsscene.cpp:4739
#12 0x00007fe815d10030 in QGraphicsView::paintEvent (this=0x2315660, event=<optimized out>) at graphicsview/qgraphicsview.cpp:3471
#13 0x00007fe815725f66 in QWidget::event (this=0x2315660, event=0x7fff307f2490) at kernel/qwidget.cpp:8517
#14 0x00007fe815ae6836 in QFrame::event (this=0x2315660, e=0x7fff307f2490) at widgets/qframe.cpp:557
#15 0x00007fe815d112eb in QGraphicsView::viewportEvent (this=0x2315660, event=0x7fff307f2490) at graphicsview/qgraphicsview.cpp:2866
#16 0x00007fe8163544b8 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x25530e0, event=0x7fff307f2490) at kernel/qcoreapplication.cpp:1025
#17 0x00007fe8156d577f in notify_helper (e=0x7fff307f2490, receiver=0x25530e0, this=0x19589e0) at kernel/qapplication.cpp:4552
#18 QApplicationPrivate::notify_helper (this=0x19589e0, receiver=0x25530e0, e=0x7fff307f2490) at kernel/qapplication.cpp:4528
#19 0x00007fe8156da583 in QApplication::notify (this=0x7fff307f8890, receiver=0x25530e0, e=0x7fff307f2490) at kernel/qapplication.cpp:4417
#20 0x00007fe8170150e6 in KApplication::notify (this=0x7fff307f8890, receiver=0x25530e0, event=0x7fff307f2490) at ../../kdeui/kernel/kapplication.cpp:311
#21 0x00007fe81635432c in QCoreApplication::notifyInternal (this=0x7fff307f8890, receiver=0x25530e0, event=0x7fff307f2490) at kernel/qcoreapplication.cpp:915
#22 0x00007fe815721c06 in sendSpontaneousEvent (event=0x7fff307f2490, receiver=0x25530e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#23 QWidgetPrivate::drawWidget (this=0x1f68150, pdev=0x1eb8290, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5594
#24 0x00007fe81572287f in QWidgetPrivate::paintSiblingsRecursive (this=0x2485eb0, pdev=0x1eb8290, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5803
#25 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x2485eb0, pdev=0x1eb8290, siblings=..., index=0, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#26 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x2485eb0, pdev=0x1eb8290, siblings=..., index=1, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#27 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x2485eb0, pdev=0x1eb8290, siblings=..., index=2, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#28 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x2485eb0, pdev=0x1eb8290, siblings=..., index=3, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#29 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x2485eb0, pdev=0x1eb8290, siblings=..., index=5, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#30 0x00007fe81572193c in QWidgetPrivate::drawWidget (this=0x2485eb0, pdev=0x1eb8290, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5647
#31 0x00007fe81572287f in QWidgetPrivate::paintSiblingsRecursive (this=0x1e47d00, pdev=0x1eb8290, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5803
#32 0x00007fe81572193c in QWidgetPrivate::drawWidget (this=0x1e47d00, pdev=0x1eb8290, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5647
#33 0x00007fe81572287f in QWidgetPrivate::paintSiblingsRecursive (this=0x1df08a0, pdev=0x1eb8290, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5803
#34 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x1df08a0, pdev=0x1eb8290, siblings=..., index=0, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#35 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x1df08a0, pdev=0x1eb8290, siblings=..., index=1, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#36 0x00007fe81572193c in QWidgetPrivate::drawWidget (this=0x1df08a0, pdev=0x1eb8290, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5647
#37 0x00007fe81572287f in QWidgetPrivate::paintSiblingsRecursive (this=0x1eee560, pdev=0x1eb8290, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5803
#38 0x00007fe81572193c in QWidgetPrivate::drawWidget (this=0x1eee560, pdev=0x1eb8290, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5647
#39 0x00007fe81572287f in QWidgetPrivate::paintSiblingsRecursive (this=0x1af3720, pdev=0x1eb8290, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5803
#40 0x00007fe815722607 in QWidgetPrivate::paintSiblingsRecursive (this=0x1af3720, pdev=0x1eb8290, siblings=..., index=31, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5790
#41 0x00007fe81572193c in QWidgetPrivate::drawWidget (this=0x1af3720, pdev=0x1eb8290, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0x1d987e0) at kernel/qwidget.cpp:5647
#42 0x00007fe8158f2f48 in QWidgetBackingStore::sync (this=0x1d987e0) at painting/qbackingstore.cpp:1373
#43 0x00007fe815718930 in QWidgetPrivate::syncBackingStore (this=0x1af3720) at kernel/qwidget.cpp:1892
#44 0x00007fe81572647c in QWidget::event (this=0x1af3330, event=0x1f91260) at kernel/qwidget.cpp:8664
#45 0x00007fe815b0011b in QMainWindow::event (this=0x1af3330, event=0x1f91260) at widgets/qmainwindow.cpp:1478
#46 0x00007fe817111b78 in KXmlGuiWindow::event (this=0x1af3330, ev=0x1f91260) at ../../kdeui/xmlgui/kxmlguiwindow.cpp:126
#47 0x00007fe8156d57b4 in notify_helper (e=0x1f91260, receiver=0x1af3330, this=0x19589e0) at kernel/qapplication.cpp:4556
#48 QApplicationPrivate::notify_helper (this=0x19589e0, receiver=0x1af3330, e=0x1f91260) at kernel/qapplication.cpp:4528
#49 0x00007fe8156da583 in QApplication::notify (this=0x7fff307f8890, receiver=0x1af3330, e=0x1f91260) at kernel/qapplication.cpp:4417
#50 0x00007fe8170150e6 in KApplication::notify (this=0x7fff307f8890, receiver=0x1af3330, event=0x1f91260) at ../../kdeui/kernel/kapplication.cpp:311
#51 0x00007fe81635432c in QCoreApplication::notifyInternal (this=0x7fff307f8890, receiver=0x1af3330, event=0x1f91260) at kernel/qcoreapplication.cpp:915
#52 0x00007fe81635810a in sendEvent (event=0x1f91260, receiver=0x1af3330) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#53 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1925f60) at kernel/qcoreapplication.cpp:1539
#54 0x00007fe816383493 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#55 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#56 0x00007fe81176bd13 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#57 0x00007fe81176c060 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#58 0x00007fe81176c124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#59 0x00007fe8163838bf in QEventDispatcherGlib::processEvents (this=0x19278c0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#60 0x00007fe81577dcde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#61 0x00007fe8163585af in QCoreApplication::processEvents (flags=...) at kernel/qcoreapplication.cpp:1102
#62 0x0000000000759fcf in UMLApp::setCurrentView (this=0x1af3330, view=0x2315660) at ../../umbrello/uml.cpp:2790
#63 0x000000000076bd14 in UMLDoc::changeCurrentView (this=0x1b110c0, id=...) at ../../umbrello/umldoc.cpp:1439
#64 0x000000000075a9bf in UMLApp::slotTabChanged (this=0x1af3330, tab=<optimized out>) at ../../umbrello/uml.cpp:2836
#65 0x00007fe816368781 in QMetaObject::activate (sender=0x1e4d1c0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff307f5d00) at kernel/qobject.cpp:3547
#66 0x00007fe815b4f902 in QTabWidget::currentChanged (this=<optimized out>, _t1=0x2315660) at .moc/release-shared/moc_qtabwidget.cpp:228
#67 0x00007fe815b4f9d0 in QTabWidgetPrivate::_q_showTab (this=0x1df08a0, index=0) at widgets/qtabwidget.cpp:748
#68 0x00007fe816368781 in QMetaObject::activate (sender=0x1e5f0f0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff307f5e80) at kernel/qobject.cpp:3547
#69 0x00007fe815b44e7e in QTabBar::currentChanged (this=<optimized out>, _t1=0) at .moc/release-shared/moc_qtabbar.cpp:215
#70 0x00007fe815b4bd72 in QTabBar::insertTab (this=0x1e5f0f0, index=0, icon=..., text=...) at widgets/qtabbar.cpp:852
#71 0x00007fe815b4e4b2 in QTabWidget::insertTab (this=0x1e4d1c0, index=0, w=<optimized out>, icon=..., label=...) at widgets/qtabwidget.cpp:466
#72 0x00007fe815b4e53e in QTabWidget::insertTab (this=0x1e4d1c0, index=-1, w=0x2315660, label=...) at widgets/qtabwidget.cpp:445
#73 0x000000000075a397 in UMLApp::setCurrentView (this=0x1af3330, view=0x2315660) at ../../umbrello/uml.cpp:2776
#74 0x000000000076bd14 in UMLDoc::changeCurrentView (this=0x1b110c0, id=...) at ../../umbrello/umldoc.cpp:1439
#75 0x00000000007743b4 in UMLDoc::loadFromXMI (this=0x1b110c0, file=..., encode=<optimized out>) at ../../umbrello/umldoc.cpp:2062
#76 0x00000000007704d1 in UMLDoc::openDocument (this=0x1b110c0, url=..., format=<optimized out>) at ../../umbrello/umldoc.cpp:542
#77 0x000000000075d0de in UMLApp::slotFileOpen (this=0x1af3330) at ../../umbrello/uml.cpp:1167
#78 0x00007fe816368781 in QMetaObject::activate (sender=0x1d44f70, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff307f72b0) at kernel/qobject.cpp:3547
#79 0x00007fe8156cf072 in QAction::triggered (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:277
#80 0x00007fe8156cf25f in QAction::activate (this=0x1d44f70, event=<optimized out>) at kernel/qaction.cpp:1257
#81 0x00007fe815aa51ca in QAbstractButtonPrivate::click (this=0x1dc1f40) at widgets/qabstractbutton.cpp:530
#82 0x00007fe815aa547c in QAbstractButton::mouseReleaseEvent (this=0x1ac1450, e=0x7fff307f7b90) at widgets/qabstractbutton.cpp:1123
#83 0x00007fe815b62aca in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:718
#84 0x00007fe815725fb4 in QWidget::event (this=0x1ac1450, event=0x7fff307f7b90) at kernel/qwidget.cpp:8371
#85 0x00007fe8156d57b4 in notify_helper (e=0x7fff307f7b90, receiver=0x1ac1450, this=0x19589e0) at kernel/qapplication.cpp:4556
#86 QApplicationPrivate::notify_helper (this=0x19589e0, receiver=0x1ac1450, e=0x7fff307f7b90) at kernel/qapplication.cpp:4528
#87 0x00007fe8156daf2f in QApplication::notify (this=<optimized out>, receiver=0x1ac1450, e=0x7fff307f7b90) at kernel/qapplication.cpp:4099
#88 0x00007fe8170150e6 in KApplication::notify (this=0x7fff307f8890, receiver=0x1ac1450, event=0x7fff307f7b90) at ../../kdeui/kernel/kapplication.cpp:311
#89 0x00007fe81635432c in QCoreApplication::notifyInternal (this=0x7fff307f8890, receiver=0x1ac1450, event=0x7fff307f7b90) at kernel/qcoreapplication.cpp:915
#90 0x00007fe8156d6782 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#91 QApplicationPrivate::sendMouseEvent (receiver=0x1ac1450, event=0x7fff307f7b90, alienWidget=0x1ac1450, nativeWidget=0x1dbca60, buttonDown=0x1ac1450, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3167
#92 0x00007fe815755b15 in QETWidget::translateMouseEvent (this=0x1dbca60, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#93 0x00007fe815754ace in QApplication::x11ProcessEvent (this=0x7fff307f8890, event=0x7fff307f8460) at kernel/qapplication_x11.cpp:3732
#94 0x00007fe81577e052 in x11EventSourceDispatch (s=0x195b560, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#95 0x00007fe81176bd13 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#96 0x00007fe81176c060 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#97 0x00007fe81176c124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#98 0x00007fe8163838bf in QEventDispatcherGlib::processEvents (this=0x19278c0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#99 0x00007fe81577dcde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#100 0x00007fe816352e62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#101 0x00007fe8163530b7 in QEventLoop::exec (this=0x7fff307f8800, flags=...) at kernel/qeventloop.cpp:204
#102 0x00007fe816358407 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#103 0x000000000043a2e5 in main (argc=3, argv=0x7fff307f8cb8) at ../../umbrello/main.cpp:113

Reported using DrKonqi
Comment 1 Joris Steyn 2014-01-04 10:27:16 UTC
Would you be able to attach the XMI that produces this crash? That would help alot.
Comment 2 Michael Brach 2014-01-04 11:32:22 UTC
Created attachment 84442 [details]
activity_diagram.xmi

Dear Joris,

thanks for requesting so quickly.

Please find the file activity_diagram.xmi attached. I couldn't open it with 
other UML software. e.g. gopher (read error). Umbrello crashes during opening.

I also attach an old automatic backup file (autospeichern.xmi). This file can be 
opened with umbrello (but is too old to be useful anymore).

Best wishes,
Michael


Am Samstag, 4. Januar 2014, 10:27:16 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=329576
> 
> Joris Steyn <jorissteyn@gmail.com> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> CC|                            |jorissteyn@gmail.com
> 
> --- Comment #1 from Joris Steyn <jorissteyn@gmail.com> ---
> Would you be able to attach the XMI that produces this crash? That would
> help alot.
Comment 3 Michael Brach 2014-01-04 11:32:24 UTC
Created attachment 84443 [details]
autospeichern.xmi
Comment 4 Ralf Habacker 2014-03-29 23:57:34 UTC
Git commit 3fe88cb10c6e687a231bd20403efa32913ba673a by Ralf Habacker.
Committed on 29/03/2014 at 23:56.
Pushed by habacker into branch 'master'.

Crash fix loading SignalWidget instance with empty text.

M  +8    -6    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/3fe88cb10c6e687a231bd20403efa32913ba673a
Comment 5 Ralf Habacker 2014-03-30 00:15:00 UTC
Git commit 94ac4429575776a85f2d99d0d72f5f02a7abcf23 by Ralf Habacker.
Committed on 30/03/2014 at 00:12.
Pushed by habacker into branch 'master'.

Fix another crash editing Time variant of SignalWidget.

M  +8    -1    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/94ac4429575776a85f2d99d0d72f5f02a7abcf23
Comment 6 Ralf Habacker 2014-03-30 00:16:01 UTC
Git commit 1f3447ed9809665f5a46a3c2e4b27d42cfe5bcda by Ralf Habacker.
Committed on 30/03/2014 at 00:12.
Pushed by habacker into branch 'KDE/4.13'.

Fix another crash editing Time variant of SignalWidget.
FIXED-IN:4.13.0
(cherry picked from commit 94ac4429575776a85f2d99d0d72f5f02a7abcf23)

M  +8    -1    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/1f3447ed9809665f5a46a3c2e4b27d42cfe5bcda
Comment 7 Ralf Habacker 2014-03-30 00:27:25 UTC
Git commit 05e61a8f60286cd0f1bf804365f311477a0b4a7d by Ralf Habacker.
Committed on 29/03/2014 at 23:56.
Pushed by habacker into branch 'KDE/4.13'.

Crash fix loading SignalWidget instance with empty text.
FIXED-IN:4.13.0
(cherry picked from commit 3fe88cb10c6e687a231bd20403efa32913ba673a)

M  +8    -6    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/05e61a8f60286cd0f1bf804365f311477a0b4a7d
Comment 8 Ralf Habacker 2014-04-02 06:17:14 UTC
For the records: 
The problem affects class SignalWidget, which uses a floatingTextWidget instance for the label of the "accept time" event. In the opposite to class AssociationWidget and MessageWidget, which also uses FloatingTextWidget instances, SignalWidget did not check zero pointer of the text widget instance in the paint() method (fixed with the commit in comment 4) and setName() (commit in comment 5).
Comment 9 Ralf Habacker 2014-04-14 09:01:06 UTC
Git commit f243b51079b20647a6c8d3e5db1ce21438f96086 by Ralf Habacker.
Committed on 29/03/2014 at 23:56.
Pushed by habacker into branch 'KDE/4.12'.

Crash fix loading SignalWidget instance with empty text.
FIXED-IN:4.12.5
(cherry picked from commit 3fe88cb10c6e687a231bd20403efa32913ba673a)

M  +8    -6    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/f243b51079b20647a6c8d3e5db1ce21438f96086
Comment 10 Ralf Habacker 2014-04-14 09:01:07 UTC
Git commit ce45e86066075ed7dfbd488fdde0520fe8400420 by Ralf Habacker.
Committed on 30/03/2014 at 00:12.
Pushed by habacker into branch 'KDE/4.12'.

Fix another crash editing Time variant of SignalWidget.
FIXED-IN:4.12.5
(cherry picked from commit 94ac4429575776a85f2d99d0d72f5f02a7abcf23)

M  +8    -1    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/ce45e86066075ed7dfbd488fdde0520fe8400420