Fix another crash editing Time variant of SignalWidget.

BUG:329576
FIXED-IN:4.12.5
(cherry picked from commit 94ac4429575776a85f2d99d0d72f5f02a7abcf23)